--- a/03-md-phases-10-m/btnz.in
+++ b/03-md-phases-10-m/btnz.in
@@ -34,11 +34,11 @@ variable ey equal $(v_ext_ef)/sqrt(3.0)
 variable ez equal $(v_ext_ef)/sqrt(3.0)
 
 
-label loop
+#label loop
 #nz in range of [10;20;2]
-variable un loop 1 2 pad
-variable nz equal v_un*2
-
+#variable un loop 1 2 pad
+#variable nz equal v_un*2
+variable nz equal 10
 variable llc equal v_a*v_nz
 variable XZ_DELTA equal v_llc*cos(${alpha_r})#correct till now
 
@@ -109,29 +109,38 @@ variable la equal lx
 variable lb equal ly
 variable lc equal lz
 fix AVE_LAT all ave/time 1 10000 40000 v_la v_lb v_lc file ave_lat
-fix AVE_ATOM all ave/atom 1 10000 40000 c_dr[1] c_dr[2] c_dr[3]
+fix AVE_ATOM all ave/atom 1 10000 40000 c_er[1] c_er[2] c_er[3]
 dump core_displ all custom 40000 displcoredump id type f_AVE_ATOM[1] f_AVE_ATOM[2] f_AVE_ATOM[3]
 variable TEMP equal temp
 fix AVE_T all ave/time 1 10000 40000 v_TEMP file ave_temp
 #-------------------------------------------------MD SIMULATION SETTINGS
 velocity all create 5 146981634 dist gaussian mom yes rot no bias yes temp CSequ
 timestep 0.00001
+velocity all scale 5 temp CSequ
+fix NPT all npt temp 5 5 0.1 x 1. 1. 0.1 y 1. 1. 0.1 xy 0.0 0.0 0.1 couple none
+fix_modify NPT temp CSequ
+run 30000
+unfix NPT
+fix NPT all npt temp 5 5 0.1 x 1. 1. 0.1 y 1. 1. 0.1 xy 0.0 0.0 0.1 couple none
+fix_modify NPT temp CSequ
+run 10000
+unfix NPT
 min_style fire
 minimize 0.0 1e-05 60000 10000
 reset_timestep 0
-compute dr all displace/atom
+#compute dr all displace/atom
+#reset_timestep 0
+#dump dump_displ all custom 1000 displdump id type c_dr[1] c_dr[2] c_dr[3]
+compute pol all polar/atom
 reset_timestep 0
-dump dump_displ all custom 1000 displdump id type c_dr[1] c_dr[2] c_dr[3]
+dump dump_pol all custom 1000 displdump id type c_pol[1] c_pol[2] c_pol[3] c_pol[4]
+
 
 
 unfix AVE_T
 unfix AVE_ATOM
 unfix AVE_LAT
 
-
-
-
-next        un
-jump        btnz.in loop
-label       break
-variable    un delete
+#clear
+#next        un
+#jump        btnz.in loop
