--- a/6-6-6/btloop.in
+++ b/6-6-6/btloop.in
@@ -101,6 +101,10 @@ thermo_style custom step etotal pe ke epair evdwl ecoul elong ebond fnorm lx ly 
 compute CSequ all temp/cs cores shells
 thermo_modify temp CSequ
 
+fix ef all efield 0 0 0
+print " electric field strength = 0"
+fix_modify ef energy yes 
+
 
 compute pol all polar/atom
 reset_timestep 0
