--- a/loop/btloop.in
+++ b/loop/btloop.in
@@ -1,4 +1,4 @@
-# Input file for lammps simulation using Isotropic-anharmonic Shell Model 
+# Input file for lammps simulation using Isotropic-anharmonic Shell Model
 # proposed by Vielma and Schneider based on PBE Generalized Gradient 
 # Approximation(GGA) to Density Functional Theory(DFT): 
 # [Vielma Schneider 2013](http://dx.doi.org/10.1063/1.4827475)
@@ -18,9 +18,9 @@ variable alpha internal 89.81
 
 #'a` and `alpha` are lattice parameters
 
-variable nx internal 2
-variable ny internal 2
-variable nz internal 2
+variable nx internal 6
+variable ny internal 6
+variable nz internal 8
 
 #`n` is the number of RVE replica in each direction
 
@@ -32,9 +32,9 @@ variable llc equal v_a*v_nz
 
 
 variable alpha_r equal ${alpha}*PI/180.0
-variable XY_DELTA equal v_lla*cos(${alpha_r})
-variable YZ_DELTA equal v_llb*cos(${alpha_r})
-variable XZ_DELTA equal v_llc*cos(${alpha_r})#correct till now
+variable XY_DELTA equal v_llc*cos(${alpha_r})
+variable YZ_DELTA equal v_lla*cos(${alpha_r})
+variable XZ_DELTA equal v_llb*cos(${alpha_r})#correct till now
 
 
 
@@ -75,21 +75,22 @@ pair_style born/coul/wolf/cs 0.25 16 14.5
 
 #------------------------ A,  rho, sigma=0,     C,      D 
 pair_coeff	*	*	 0.0000	1.0000	0.000	0.0000	0.000
-pair_coeff	2	6	1588.36	0.3553	0.000	0.0000	0.000
-pair_coeff	4	6	3131.25	0.2591	0.000	0.0000	0.000
-pair_coeff	6	6	2641.41	0.3507	0.000	535.37	0.000
+pair_coeff	2	6	1061.3	0.3740	0.000	0.0000	0.000 #864.536 0.38729 0.000	0.0000	0.000
+pair_coeff	4	6	3769.93	0.2589	0.000	0.0000	0.000 #4526.635 0.25239 0.000	0.0000	0.000
+pair_coeff	6	6	4740.00	0.2686	0.000	160.00	0.000	#4102.743 0.29581 0.000	300.00	0.000
 pair_modify tail no
 
 bond_style class2
-bond_coeff	1	0.0	155.820	0.0		   0.0000000
-bond_coeff	2	0.0	166.275	0.0		 20.83333333
-bond_coeff	3	0.0	 23.155	0.0		274.96833333
-
+bond_coeff	1	0.0	125.9	0.000	0.000
+bond_coeff	2	0.0	161.0	0.000	20.833
+bond_coeff	3	0.0	15.5	0.0	166.67
+#bond_style class2
+#bond_coeff	2	0.0	161.0	0.000	20.833
 #-------------------------------------------------INITIALIZATION SETTINGS
 change_box all triclinic xy delta $(v_XY_DELTA) yz delta $(v_YZ_DELTA) xz delta $(v_XZ_DELTA) remap
 
 compute dr all displace/atom
-compute er all chargedisplace/atom
+#compute er all chargedisplace/atom
 #reset_timestep 0
 
 
